<?php die(); ?>
Akeeba SocialLogin 3.2.8
================================================================================
# [LOW] Joomla 4.0 beta 7 changed how extra login button icons are handled. Again.

Akeeba SocialLogin 3.2.7
================================================================================
+ Yes/no fields now work correctly on Joomla 4.0 beta 7 and later

Akeeba SocialLogin 3.2.6
================================================================================
~ Releasing the previous version without changes, due to server and CDN issues which resulted in inconsistent updates
+ Supports controller as alias for view under Joomla 4

Akeeba SocialLogin 3.2.5
================================================================================
+ Supports controller as alias for view under Joomla 4

Akeeba SocialLogin 3.2.4
================================================================================
# [MEDIUM] Joomla error page when the social network returns invalid data e.g. user canceled the login
# [MEDIUM] Cannot override layout files
# [LOW] Apple plugin: deprecation notices from a dependency could prevent access to the site if the plugin is not configured properly
# [LOW] PHP Notice using JLoader::registerNamespace on Joomla 4

Akeeba SocialLogin 3.2.3
================================================================================
- Dropped support for PHP 7.1.0
~ Login with Microsoft: Support Azure AD app registrations on top of the deprecated Windows Live SDK apps.
~ PHP 8.0 support
# [HIGH] The LinkedIn plugin was not installed when installing the package
# [HIGH] Joomla 4 beta 6 changed how sessions work, breaking everything

Akeeba SocialLogin 3.2.2
================================================================================
# [LOW] PHP notice in the post-installation script (gh-60)
# [LOW] Unnecessarily including mooTools in the frontend (gh-61)

Akeeba SocialLogin 3.2.1