@@ -4,14 +4,10 @@
     <include_path>
       <path value="$PROJECT_DIR$/../../master/joomla-cms" />
       <path value="$PROJECT_DIR$/../../dionysopoulos/joomlatypehints/generated_hints" />
-      <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/composer" />
-      <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/lcobucci/jwt" />
-      <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/phpseclib/phpseclib" />
-      <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/codercat/jwk-to-pem" />
-      <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/phpseclib/bcmath_compat" />
+      <path value="$PROJECT_DIR$/../../master/joomla4" />
     </include_path>
   </component>
-  <component name="PhpProjectSharedConfiguration" php_language_level="7.1" />
+  <component name="PhpProjectSharedConfiguration" php_language_level="7.2" />
   <component name="PhpUnit">
     <phpunit_settings>
       <PhpUnitSettings custom_loader_path="$PROJECT_DIR$/plugins/system/sociallogin/vendor/autoload.php" />
