@@ -11,10 +11,13 @@
 		}
 	],
 	"config": {
-		"vendor-dir": "plugins/system/sociallogin/vendor"
+		"vendor-dir": "plugins/system/sociallogin/vendor",
+		"platform": {
+			"php": "7.2.0"
+		}
 	},
 	"require": {
-		"php": "^7.1",
+		"php": ">=7.2 <8.1",
 		"ext-json": "*",
 		"lcobucci/jwt": "^3.3",
 		"codercat/jwk-to-pem": "<= 1.0.0",
