@@ -2,6 +2,7 @@
 Akeeba SocialLogin 3.2.8
 ================================================================================
 # [LOW] Joomla 4.0 beta 7 changed how extra login button icons are handled. Again.
+# [LOW] Failed to work on PHP 7.2 due to a Composer version check.
 
 Akeeba SocialLogin 3.2.7
 ================================================================================
